<resources>
    <string name="app_name">Staj Takip</string>
    <string name="login">Giriş Yap</string>
    <string name="my_internship">Stajlarım</string>
    <string name="profile_name">Yusuf ÇAKAL</string>
    <string name="profile_description">Öğrenci</string>
    <string name="stajlarım">Stajlarım</string>
    <string name="firmalar">FİRMA İŞLEMLERİ</string>
    <string name="firma">Firmalar</string>
    <string name="logout">Çıkış Yap</string>
    <string name="firmaOnayEksi1">Firma Onay Bekleniyor..</string>
    <string name="firmaOnay0">Okul Onayı Bekleniyor..</string>
    <string name="firmaOnayBir">Onaylandı</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firmaadi">Firma Adı</string>
    <string name="firmamail">Firma Mail</string>
    <string name="firmaekle">Firma Ekle</string>
    <string name="staj">Stajlar</string>
    <string name="stajlar">STAJ İŞLEMLERİ</string>
    <string name="stajekle">Staj Ekle</string>
    <string name="select">SEÇ</string>
    <string name="send">Staj Ekle</string>
    <string name="stajgunekle">Staj Günü Ekle</string>
    <string name="stajgunaciklama">Staj Günü Açıklama</string>
    <string name="stajgunyok">Bu Staja Gün Eklenmemiştir.</string>
    <string name="stajGunEkle">Gün Ekle</string>
    <string name="add_image">Resim Ekle</string>
    <string name="personel">Personel</string>
    <string name="personelIslem">PERSONEL İŞLEMLERİ</string>
    <string name="personelEkle">Personel Ekle</string>
    <string name="useramail">Mail</string>
    <string name="usersifre">Şifre</string>
    <string name="stajdegerlendir">STAJI DEĞERLENDİR</string>
    <string name="devam_durumu">İŞ DEVAM DURUMU</string>
    <string name="calisma_gayret">ÇALIŞMA GAYRETİ</string>
    <string name="tam_yapma">ZAMANINDA YAPMA</string>
    <string name="is_tutumu">İŞYERİNDEKİ TUTUMU</string>
    <string name="staj_degerlendir">STAJI KAYDET</string>
    <string name="profile">Profil</string>
    <string name="changeSave">Değişiklikleri Kaydet</string>
    <string name="staj_onay_bekleyen">Onay Bekleyenler</string>
    <string name="staj_onaylananlar">Onaylananlar</string>
    <string name="staj_degerlendirilenler">Değerlendirilenler</string>
    <string name="staj_degerlendirme_bekleyen">Değerlendirme Bekleyenler</string>

    <string-array name="staj_deger">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

</resources>
